// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatetimeText renders loading state 1`] = `null`;

exports[`DatetimeText renders without error 1`] = `
<TextInput
  allowFontScaling={true}
  animatedStyle={
    {
      "value": {},
    }
  }
  collapsable={false}
  editable={false}
  maxFontSizeMultiplier={1.4}
  style={
    {
      "color": "#7D7D7D",
      "fontFamily": "Basel-Book",
      "fontSize": 19,
      "lineHeight": 24,
      "padding": 0,
    }
  }
  text="Thursday, November 1st, 2023"
  underlineColorAndroid="transparent"
  value="Thursday, November 1st, 2023"
/>
`;

exports[`PriceText renders loading state 1`] = `
<View
  style={
    {
      "flexDirection": "row",
    }
  }
  testID="price-text"
>
  <TextInput
    allowFontScaling={true}
    animatedStyle={
      {
        "value": {
          "fontSize": 106,
        },
      }
    }
    collapsable={false}
    editable={false}
    maxFontSizeMultiplier={1.2}
    style={
      {
        "color": "#222222",
        "fontFamily": "Basel-Book",
        "fontSize": 106,
        "lineHeight": 60,
        "padding": 0,
      }
    }
    testID="wholePart"
    text="-"
    underlineColorAndroid="transparent"
    value="-"
  />
</View>
`;

exports[`PriceText renders without error 1`] = `
<View
  style={
    {
      "flexDirection": "row",
    }
  }
  testID="price-text"
>
  <TextInput
    allowFontScaling={true}
    animatedStyle={
      {
        "value": {
          "fontSize": 106,
        },
      }
    }
    collapsable={false}
    editable={false}
    maxFontSizeMultiplier={1.2}
    style={
      {
        "color": "#222222",
        "fontFamily": "Basel-Book",
        "fontSize": 106,
        "lineHeight": 60,
        "padding": 0,
      }
    }
    testID="wholePart"
    text="$55"
    underlineColorAndroid="transparent"
    value="$55"
  />
  <TextInput
    allowFontScaling={true}
    animatedStyle={
      {
        "value": {
          "color": "#CECECE",
          "fontSize": 106,
        },
      }
    }
    collapsable={false}
    editable={false}
    maxFontSizeMultiplier={1.2}
    style={
      {
        "color": "#CECECE",
        "fontFamily": "Basel-Book",
        "fontSize": 106,
        "lineHeight": 60,
        "padding": 0,
      }
    }
    testID="decimalPart"
    text=".00"
    underlineColorAndroid="transparent"
    value=".00"
  />
</View>
`;

exports[`PriceText renders without error less than a dollar 1`] = `
<View
  style={
    {
      "flexDirection": "row",
    }
  }
  testID="price-text"
>
  <TextInput
    allowFontScaling={true}
    animatedStyle={
      {
        "value": {
          "fontSize": 106,
        },
      }
    }
    collapsable={false}
    editable={false}
    maxFontSizeMultiplier={1.2}
    style={
      {
        "color": "#222222",
        "fontFamily": "Basel-Book",
        "fontSize": 106,
        "lineHeight": 60,
        "padding": 0,
      }
    }
    testID="wholePart"
    text="$0"
    underlineColorAndroid="transparent"
    value="$0"
  />
  <TextInput
    allowFontScaling={true}
    animatedStyle={
      {
        "value": {
          "color": "#222222",
          "fontSize": 106,
        },
      }
    }
    collapsable={false}
    editable={false}
    maxFontSizeMultiplier={1.2}
    style={
      {
        "color": "#222222",
        "fontFamily": "Basel-Book",
        "fontSize": 106,
        "lineHeight": 60,
        "padding": 0,
      }
    }
    testID="decimalPart"
    text=".0500"
    underlineColorAndroid="transparent"
    value=".0500"
  />
</View>
`;

exports[`RelativeChangeText renders loading state 1`] = `
<View
  style={
    {
      "flexDirection": "column",
      "marginTop": 2,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      {
        "flexDirection": "column",
        "opacity": 0,
      }
    }
    testID="shimmer-placeholder"
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
      testID="text-placeholder"
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "position": "relative",
          }
        }
      >
        <View
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
        >
          <View
            style={
              {
                "flexDirection": "row",
              }
            }
          >
            <TextInput
              allowFontScaling={true}
              animatedStyle={
                {
                  "value": {},
                }
              }
              collapsable={false}
              editable={false}
              maxFontSizeMultiplier={1.4}
              style={
                {
                  "fontFamily": "Basel-Book",
                  "fontSize": 19,
                  "lineHeight": 24,
                  "marginHorizontal": 0,
                  "opacity": 0,
                  "padding": 0,
                  "paddingHorizontal": 0,
                  "width": 0,
                }
              }
              underlineColorAndroid="transparent"
            />
            <Text
              animatedStyle={
                {
                  "value": {},
                }
              }
              collapsable={false}
              style={
                {
                  "fontFamily": "Basel-Book",
                  "fontSize": 19,
                  "lineHeight": 24,
                  "opacity": 0,
                  "padding": 0,
                }
              }
            >
              00.00%
            </Text>
          </View>
        </View>
        <View
          style={
            {
              "backgroundColor": "#F9F9F9",
              "borderBottomLeftRadius": 4,
              "borderBottomRightRadius": 4,
              "borderTopLeftRadius": 4,
              "borderTopRightRadius": 4,
              "bottom": "5%",
              "flexDirection": "column",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": "5%",
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`RelativeChangeText renders without error 1`] = `
<View
  style={
    {
      "alignItems": "flex-end",
      "flexDirection": "row",
      "gap": 2,
      "marginTop": 2,
    }
  }
>
  <RNSVGSvgView
    align="xMidYMid"
    animatedStyle={
      {
        "value": {
          "color": "#FF5F52",
          "transform": [
            {
              "rotate": "0deg",
            },
          ],
        },
      }
    }
    bbHeight="16"
    bbWidth="16"
    collapsable={false}
    fill="none"
    focusable={false}
    meetOrSlice={0}
    minX={0}
    minY={0}
    strokeWidth={2}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "color": "#FF5F52",
          "height": 16,
          "transform": [
            {
              "rotate": "0deg",
            },
          ],
          "translateY": 1,
          "width": 16,
        },
        {
          "flex": 0,
          "height": 16,
          "width": 16,
        },
      ]
    }
    tintColor="#FF5F52"
    vbHeight={24}
    vbWidth={24}
  >
    <RNSVGGroup
      fill={null}
      matrix={
        [
          1,
          0,
          -0,
          1,
          0,
          1,
        ]
      }
      propList={
        [
          "fill",
          "strokeWidth",
        ]
      }
      strokeWidth="2"
    >
      <RNSVGPath
        d="M10.6979 16.2453L6.31787 9.75247C5.58184 8.66118 6.2058 7 7.35185 7L16.6482 7C17.7942 7 18.4182 8.66243 17.6821 9.75247L13.3021 16.2453C12.623 17.2516 11.377 17.2516 10.6979 16.2453Z"
        fill={
          {
            "type": 2,
          }
        }
        propList={
          [
            "fill",
          ]
        }
      />
    </RNSVGGroup>
  </RNSVGSvgView>
  <TextInput
    allowFontScaling={true}
    animatedStyle={
      {
        "value": {
          "color": "#FF5F52",
        },
      }
    }
    collapsable={false}
    editable={false}
    maxFontSizeMultiplier={1.4}
    style={
      {
        "color": "#FF5F52",
        "fontFamily": "Basel-Book",
        "fontSize": 19,
        "lineHeight": 24,
        "padding": 0,
      }
    }
    testID="relative-change-text"
    text="10.00%"
    underlineColorAndroid="transparent"
    value="10.00%"
  />
</View>
`;
